--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </li>
             <li class="features-element">
               <svg class="features-icon shedule">
-                <use href="./images/symbol-defs.svg#shedule"></use>
+                <use href="./images/icon.svg#icon-shedule"></use>
               </svg>
               <h3 class="title">Планирование</h3>
               <p class="desc">
