--- a/portfolio.html
+++ b/portfolio.html
@@ -29,19 +29,21 @@
 
         <ul class="header list">
           <li class="item">
-            <svg class="item-envelop">
-              <use href="./images/icon.svg#icon-envelope"></use>
-            </svg>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link flex-icon">
+              <svg class="item-envelop">
+                <use href="./images/icon.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
 
           <li class="item">
-            <svg class="item-mobile">
-              <use href="./images/icon.svg#icon-mobile"></use>
-            </svg>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link flex-icon">
+              <svg class="item-mobile">
+                <use href="./images/icon.svg#icon-mobile"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -72,7 +74,7 @@
 
           <ul class="our-work list">
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-1.jpg"
@@ -87,7 +89,7 @@
               </a>
             </li>
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-2.jpg"
@@ -102,7 +104,7 @@
               </a>
             </li>
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-3.jpg"
@@ -117,7 +119,7 @@
               </a>
             </li>
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-4.jpg"
@@ -133,7 +135,7 @@
             </li>
 
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-5.jpg"
@@ -148,7 +150,7 @@
               </a>
             </li>
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-6.jpg"
@@ -163,7 +165,7 @@
               </a>
             </li>
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-7.jpg"
@@ -178,7 +180,7 @@
               </a>
             </li>
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-8.jpg"
@@ -193,7 +195,7 @@
               </a>
             </li>
             <li class="our-work-element">
-              <a href="/">
+              <a href="/" class="our-work-link">
                 <img
                   class="projects"
                   src="./images/project-9.jpg"
@@ -235,29 +237,29 @@
         <div class="join">
           <b class="join-text">присоединяйтесь</b>
           <ul class="social-footer list">
-            <li>
-              <a class="social-footer-links">
+            <li class="social-footer-item">
+              <a href="https://www.instagram.com" class="social-footer-links">
                 <svg class="instagram">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer-links">
+              <a href="https://twitter.com" class="social-footer-links">
                 <svg class="twitter">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer-links">
+              <a href="https://www.facebook.com" class="social-footer-links">
                 <svg class="facebook">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer-links">
+              <a href="https://www.linkedin.cn" class="social-footer-links">
                 <svg class="linkedin">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
