--- a/index.html
+++ b/index.html
@@ -32,19 +32,21 @@
 
         <ul class="header list">
           <li class="item">
-            <svg class="item-envelop">
-              <use href="./images/icon.svg#icon-envelope"></use>
-            </svg>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="link flex-icon">
+              <svg class="item-envelop">
+                <use href="./images/icon.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
 
           <li class="item">
-            <svg class="item-mobile">
-              <use href="./images/icon.svg#icon-mobile"></use>
-            </svg>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link flex-icon">
+              <svg class="item-mobile">
+                <use href="./images/icon.svg#icon-mobile"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -148,28 +150,28 @@
               <p class="desc" lang="en">Product Designer</p>
               <ul class="social list">
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.instagram.com" class="social-links">
                     <svg class="instagram">
                       <use href="./images/icon.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://twitter.com" class="social-links">
                     <svg class="twitter">
                       <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.facebook.com" class="social-links">
                     <svg class="facebook">
                       <use href="./images/icon.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.linkedin.cn" class="social-links">
                     <svg class="linkedin">
                       <use href="./images/icon.svg#icon-linkedin"></use>
                     </svg>
@@ -189,28 +191,28 @@
               <p class="desc" lang="en">Frontend Developer</p>
               <ul class="social list">
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.instagram.com" class="social-links">
                     <svg class="instagram">
                       <use href="./images/icon.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://twitter.com" class="social-links">
                     <svg class="twitter">
                       <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.facebook.com" class="social-links">
                     <svg class="facebook">
                       <use href="./images/icon.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.linkedin.cn" class="social-links">
                     <svg class="linkedin">
                       <use href="./images/icon.svg#icon-linkedin"></use>
                     </svg>
@@ -229,28 +231,28 @@
               <p class="desc" lang="en">Marketing</p>
               <ul class="social list">
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.instagram.com" class="social-links">
                     <svg class="instagram">
                       <use href="./images/icon.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://twitter.com" class="social-links">
                     <svg class="twitter">
                       <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.facebook.com" class="social-links">
                     <svg class="facebook">
                       <use href="./images/icon.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.linkedin.cn" class="social-links">
                     <svg class="linkedin">
                       <use href="./images/icon.svg#icon-linkedin"></use>
                     </svg>
@@ -269,28 +271,28 @@
               <p class="desc" lang="en">UI Designer</p>
               <ul class="social list">
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.instagram.com" class="social-links">
                     <svg class="instagram">
                       <use href="./images/icon.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://twitter.com" class="social-links">
                     <svg class="twitter">
                       <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.facebook.com" class="social-links">
                     <svg class="facebook">
                       <use href="./images/icon.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
-                  <a class="social-links">
+                  <a href="https://www.linkedin.cn" class="social-links">
                     <svg class="linkedin">
                       <use href="./images/icon.svg#icon-linkedin"></use>
                     </svg>
@@ -301,48 +303,58 @@
           </ul>
         </div>
       </section>
-    </main>
 
-    <!-- clients -->
-    <section class="section">
-      <div class="container">
-        <h2 class="section-title">Постоянные клиенты</h2>
-        <ul class="clients list">
-          <li class="clients-element">
-            <a class="">
-              <svg class="clients-icon logo-1">
-                <use href="./images/icon.svg#icon-logo-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients-element">
-            <svg class="clients-icon logo-2">
-              <use href="./images/icon.svg#icon-logo-2"></use>
-            </svg>
-          </li>
-          <li class="clients-element">
-            <svg class="clients-icon logo-3">
-              <use href="./images/icon.svg#icon-logo-3"></use>
-            </svg>
-          </li>
-          <li class="clients-element">
-            <svg class="clients-icon logo-4">
-              <use href="./images/icon.svg#icon-logo-4"></use>
-            </svg>
-          </li>
-          <li class="clients-element">
-            <svg class="clients-icon logo-5">
-              <use href="./images/icon.svg#icon-logo-5"></use>
-            </svg>
-          </li>
-          <li class="clients-element">
-            <svg class="clients-icon logo-6">
-              <use href="./images/icon.svg#icon-logo-6"></use>
-            </svg>
-          </li>
-        </ul>
-      </div>
-    </section>
+      <!-- clients -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients list">
+            <li class="clients-element">
+              <a href="/" class="clients-link">
+                <svg class="clients-icon logo-1">
+                  <use href="./images/icon.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-element">
+              <a href="/" class="clients-link">
+                <svg class="clients-icon logo-2">
+                  <use href="./images/icon.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-element">
+              <a href="/" class="clients-link">
+                <svg class="clients-icon logo-3">
+                  <use href="./images/icon.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-element">
+              <a href="/" class="clients-link">
+                <svg class="clients-icon logo-4">
+                  <use href="./images/icon.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-element">
+              <a href="/" class="clients-link">
+                <svg class="clients-icon logo-5">
+                  <use href="./images/icon.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-element">
+              <a href="/" class="clients-link">
+                <svg class="clients-icon logo-6">
+                  <use href="./images/icon.svg#icon-logo-6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
     <!-- footer -->
 
@@ -369,29 +381,29 @@
         <div class="join">
           <b class="join-text">присоединяйтесь</b>
           <ul class="social-footer list">
-            <li>
-              <a class="social-footer-links">
+            <li class="social-footer-item">
+              <a href="https://www.instagram.com" class="social-footer-links">
                 <svg class="instagram">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer-links">
+              <a href="https://twitter.com" class="social-footer-links">
                 <svg class="twitter">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer-links">
+              <a href="https://www.facebook.com" class="social-footer-links">
                 <svg class="facebook">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="social-footer-links">
+              <a href="https://www.linkedin.cn" class="social-footer-links">
                 <svg class="linkedin">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
