правки hover focus

--- a/portfolio.html
+++ b/portfolio.html
@@ -221,7 +221,7 @@
             ><span>Web</span>Studio</a
           >
           <address class="address">
-            <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="/" class="link text"> г. Киев, пр-т Леси Украинки, 26</a>
             <ul class="address list">
               <li class="item">
                 <a href="mailto:info@example.com" class="link"
