--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <ul class="clients list">
             <li class="clients-element">
               <a href="/" class="clients-link">
-                <svg class="clients-icon logo-1">
+                <svg class="logo-1">
                   <use href="./images/icon.svg#icon-logo-1"></use>
                 </svg>
               </a>
@@ -365,7 +365,7 @@
             ><span>Web</span>Studio</a
           >
           <address class="address">
-            <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="/" class="link text"> г. Киев, пр-т Леси Украинки, 26</a>
             <ul class="address list">
               <li class="item">
                 <a href="mailto:info@example.com" class="link"
