--- a/portfolio.html
+++ b/portfolio.html
@@ -15,38 +15,42 @@
   </head>
   <body>
     <header class="page-hader">
-      <div class="container page-wrap">
-        <nav class="main-nav">
-          <a href="./index.html" class="logo"><span>Web</span>Studio</a>
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+      <section class="border-bottom">
+        <div class="container page-wrap">
+          <nav class="main-nav">
+            <a href="./index.html" class="logo"><span>Web</span>Studio</a>
+            <ul class="site-nav list">
+              <li class="item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="item">
+                <a href="./portfolio.html" class="link current">Портфолио</a>
+              </li>
+              <li class="item"><a href="/" class="link">Контакты</a></li>
+            </ul>
+          </nav>
+
+          <ul class="header list">
             <li class="item">
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+              <a href="mailto:info@devstudio.com" class="link flex-icon">
+                <svg class="item-envelop">
+                  <use href="./images/icon.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
-            <li class="item"><a href="/" class="link">Контакты</a></li>
+
+            <li class="item">
+              <a href="tel:+380961111111" class="link flex-icon">
+                <svg class="item-mobile">
+                  <use href="./images/icon.svg#icon-mobile"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
+            </li>
           </ul>
-        </nav>
-
-        <ul class="header list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link flex-icon">
-              <svg class="item-envelop">
-                <use href="./images/icon.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
-          </li>
-
-          <li class="item">
-            <a href="tel:+380961111111" class="link flex-icon">
-              <svg class="item-mobile">
-                <use href="./images/icon.svg#icon-mobile"></use>
-              </svg>
-              +38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </div>
+        </div>
+      </section>
     </header>
 
     <!-- Main -->
