--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <ul class="clients list">
             <li class="clients-element">
               <a href="/" class="clients-link">
-                <svg class="logo-1">
+                <svg class="clients-icon logo-1">
                   <use href="./images/icon.svg#icon-logo-1"></use>
                 </svg>
               </a>
